--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset=""UTF-8>
+        <meta charset="UTF-8">
         <title>Flask template</title>
     </head>
     <body>
-        <h1>Hello, {{name}} ! </h1>
+        <h1>Hello ! </h1>
+        <form action="/greet" method="post">
+            <label for="name">Name : </label>
+            <input type ="text" id="name" name="name">
+            <input type="submit" value="Greet">
+        </form>
     </body>
 </html>
