--- a/Templates/index.html
+++ b/Templates/index.html
@@ -6,10 +6,21 @@
     </head>
     <body>
         <h1>Hello ! </h1>
-        <form action="/greet" method="post">
-            <label for="name">Name : </label>
-            <input type ="text" id="name" name="name">
-            <input type="submit" value="Greet">
+        <h2>Create a new student :</h2>
+        <form action="/students" method="post">
+            <label for="name">Name: </label>
+            <input type="text" id="name" name="name"><br>
+
+            <label for="age">Age: </label>
+            <input type="number" id="age" name="age"><br>
+
+            <label for="mail">Mail: </label>
+            <input type="email" id="mail" name="mail"><br>
+
+            <label for="major">Major: </label>
+            <input type="text" id="major" name="major"><br>
+
+            <input type="submit" value="Create Student">
         </form>
     </body>
 </html>
